--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -1,10 +1,12 @@
 <div class="text-center m-4">
   <h1><%= @professional.name %></h1>
+  <p><%= @professional.specialty%></p>
 </div>
 <div class="grid-professional-show">
-
   <div class="m-4">
-    <%= cl_image_tag @professional.photo.key, width: 400, crop: :fill%>
+    <div style="margin: 8px;" class="text-center">
+      <%= cl_image_tag @professional.photo.key, width: 400, crop: :fill%>
+    </div>
     <div class="card_pro">
       <h4>Contact : </h4>
       <p>Adresse : <%=@professional.address%></p>
@@ -14,21 +16,31 @@
       <h4>Description : </h4>
       <p><%=@professional.description%></p>
     </div>
+    <div class="card_pro">
+      <div class="d-flex flex-row justify-content-between">
+        <h4>Commentaires : </h4>
+        <div>
+          <% @professional.rating.times do %>
+            <i class="fas fa-star text-warning"></i>
+          <% end %>
+        </div>
+      </div>
+      <p><%=@professional.description%></p>
+    </div>
   </div>
-
   <div class="m-4">
     <h4>Prochains rendez-vous disponibles</h4>
-    <li class="nav-item dropdown d-flex align-items-end flex-column">
-            <a href="#" class="btn btn-outline-primary" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= DateTime.current.to_date %>
-            </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Mes rendez-vous", "#", class: "dropdown-item" %>
-              <%= link_to "Mon profil", "#", class: "dropdown-item" %>
-              <%= link_to "Se déconnecter", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-
+    <% 7.times do %>
+      <li class="nav-item dropdown d-flex align-items-end flex-column ">
+        <a href="#" class="btn btn-outline-primary w-100 m-1" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= DateTime.current.to_date %>
+        </a>
+        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <%= link_to "Mes rendez-vous", "#", class: "dropdown-item" %>
+          <%= link_to "Mon profil", "#", class: "dropdown-item" %>
+          <%= link_to "Se déconnecter", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+        </div>
+      </li>
+    <% end %>
   </div>
-
 </div>
