--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -1,1 +1,25 @@
-<p>hi</p>
+<div class="d-flex flex-row justify-content-center">
+  <div>
+    <% @professionals.each do |professional|%>
+      <div class="d-flex flex-row justify-content-center">
+        <a href="<%=professional_path(professional)%>" class="text-decoration-none text-black">
+          <div class="card_pro" style="width: 90%">
+            <%= cl_image_tag professional.photo.key, crop: :fill, width: 380%>
+            <h2><%= professional.name %> </h2>
+            <p><%= professional.specialty %></p>
+            <p><%= professional.address %></p>
+            <p><%= professional.description %></p>
+          </div>
+        </a>
+        <div class="card_pro">
+          <%= render "available_slots", professional: professional%>
+        </div>
+      </div>
+    <%end%>
+  </div>
+  <div  style="width: 40%; height: 600px; border-radius: 8px; position: sticky; top: 100px;"
+        data-controller="map"
+        data-map-markers-value="<%= @markers.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
+</div>
