--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -6,9 +6,83 @@
     </div>
   </div>
 
-  <%# <div class="d-flex justify-content-start custom-scroll", style="white-space: nowrap; overflow-x: auto;"> %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/judy-beth-morris-5Bi6MWlWMbw-unsplash_funbpk.jpg)">
-      Breakfast
+  <h3 class="mt-5">Nos professionnels</h3>
+  <div class="d-flex justify-content-start custom-scroll mt-2", style="white-space: nowrap; overflow-x: auto;">
+    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/judy-beth-morris-5Bi6MWlWMbw-unsplash_funbpk.jpg)">
+      <%= link_to "Vétérinaires", professionals_path(speciality: "Vétérinaire"), style: "text-decoration:none; color:white;" %>
     </div>
-  <%# </div> %>
+    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/reba-spike-PEQIIwnIGdo-unsplash_yfvjlt.jpg)">
+      <%= link_to "Toiletteurs", professionals_path(speciality: "Toiletteur"), style: "text-decoration:none; color:white;" %>
+    </div>
+    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/matt-nelson-aI3EBLvcyu4-unsplash_drfsex.jpg)">
+      <%= link_to "Promeneurs", professionals_path(speciality: "Promeneur"), style: "text-decoration:none; color:white;" %>
+    </div>
+    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
+      <div class="d-inline text-center">
+        <%= link_to "Comportementalistes", professionals_path(speciality: "Comportementaliste"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+        <p>Bientôt disponible</p>
+      </div>
+    </div>
+    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
+      <div class="d-inline text-center">
+        <%= link_to "Educateurs", professionals_path(speciality: "Educateur"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+        <p>Bientôt disponible</p>
+      </div>
+    </div>
+    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
+      <div class="d-inline text-center">
+        <%= link_to "Pensions", professionals_path(speciality: "Pension"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+        <p>Bientôt disponible</p>
+      </div>
+    </div>
+    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
+      <div class="d-inline text-center">
+        <%= link_to "Nutritionnistes", professionals_path(speciality: "Nutritionniste"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+        <p>Bientôt disponible</p>
+      </div>
+    </div>
+    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
+      <div class="d-inline text-center">
+        <%= link_to "Petsitters", professionals_path(speciality: "Petsitter"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+        <p>Bientôt disponible</p>
+      </div>
+    </div>
+  </div>
+
+  <h3 class="mt-5">Vos futurs rendez-vous</h3>
+  <% if user_signed_in? %>
+    <% if @appointments.any? %>
+      <% @appointments.each do |appointment| %>
+        <div class="card-appointment">
+          <div class="card-appointment-header">
+            <div class="d-flex ">
+              <i class="fa-regular fa-calendar-days"></i>
+              <h5><%= appointment.professional.speciality %></h5>
+              <p><%= appointment.date.strftime("%d/%m/%Y") %></p>
+              <i class="fa-regular fa-clock"></i> <p><%= appointment.date.strftime("%H:%M") %></p>
+            </div>
+          </div>
+        </div>
+        <div class="card-appointment-body d-flex">
+          <img src="<%= appointment.professional.photo %>" alt="Photo du professionnel" class="rounded-circle">
+          <%= link_to appointment.professional.name, professional_appointment_path %>
+        </div>
+      <% end %>
+    <% else %>
+      <div class="d-flex justify-content-center align-items-center">
+        <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
+          <p>Vous n'avez pas de rendez-vous à venir.</p>
+          <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733845850/owner-playing-with-pet-dog_vfnehl.png">
+        </div>
+      </div>
+    <% end %>
+  <% else %>
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
+        <p class="text-center">Veuillez vous connecter pour voir vos rendez-vous.</p>
+        <%= link_to "Se connecter", new_user_session_path, class: "text-center btn btn-primary"%>
+        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733842167/business-solution_cqdmbl.png">
+      </div>
+    </div>
+  <% end %>
 </div>
