--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -1,1 +1,14 @@
 <p>hi</p>
+<body>
+  <h1>Purchase your new kit</h1>
+  <!-- Paste your embed code script here. -->
+  <script
+    async
+    src="https://js.stripe.com/v3/buy-button.js">
+  </script>
+  <stripe-buy-button
+    buy-button-id='{{BUY_BUTTON_ID}}'
+    publishable-key="pk_test_oKhSR5nslBRnBZpjO6KuzZeX"
+  >
+  </stripe-buy-button>
+</body>
