--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,5 +1,11 @@
+<div>
+  <%= link_to 'Retour', :back %>
+</div>
+
+ <div class="container">
 <p>Votre rendez-vous est confirmé</p>
 
 <button>Déplacer rendez-vous</button>
 <button>Annuler rendez-vous</button>
 <!-- Compare this snippet from app/views/patients/home.html.erb: -->
+</div>
