--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -2,16 +2,14 @@
   <div>
     <% @professionals.each do |professional|%>
       <div class="d-flex flex-row justify-content-center">
-        <a href="<%=professional_path(professional)%>" class="text-decoration-none text-black">
-          <div class="card_pro" style="width: 90%">
+        <div class="card_pro d-flex flex-row">
+          <a href="<%=professional_path(professional)%>" class="text-decoration-none text-black">
             <%= cl_image_tag professional.photo.key, crop: :fill, width: 380%>
             <h2><%= professional.name %> </h2>
             <p><%= professional.specialty %></p>
             <p><%= professional.address %></p>
             <p><%= professional.description %></p>
-          </div>
-        </a>
-        <div class="card_pro">
+          </a>
           <%= render "available_slots", professional: professional%>
         </div>
       </div>
@@ -23,4 +21,3 @@
         data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 </div>
-
