--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -6,53 +6,55 @@
     </div>
   </div>
 
-  <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+  <%= simple_form_for :search, url: professionals_path, method: :get do |f| %>
     <div class="mt-1 d-flex justify-content-end search-form-control form-group", style="width: 24%; height:30px;">
-      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
-      <button name="button" type="submit" class="btn btn-primary">
-        <span class="text-white d-flex justify-content-center"><i class="fas fa-search"></i><span class="ms-2">Rechercher</span></span>
-      </button>
+      <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Rechercher un professionnel"
+        %>
+      <%= submit_tag "Search", class: "btn btn-primary" %>
     </div>
   <% end %>
 
   <h3 class="mt-5">Nos professionnels</h3>
   <div class="d-flex justify-content-start custom-scroll mt-2", style="white-space: nowrap; overflow-x: auto;">
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/judy-beth-morris-5Bi6MWlWMbw-unsplash_funbpk.jpg)">
-      <%= link_to "Vétérinaires", professionals_path(speciality: "Vétérinaire"), style: "text-decoration:none; color:white;" %>
+      <%= link_to "Vétérinaires", professionals_path(specialty: "Vétérinaire"), style: "text-decoration:none; color:white;" %>
     </div>
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/reba-spike-PEQIIwnIGdo-unsplash_yfvjlt.jpg)">
-      <%= link_to "Toiletteurs", professionals_path(speciality: "Toiletteur"), style: "text-decoration:none; color:white;" %>
+      <%= link_to "Toiletteurs", professionals_path(specialty: "Toiletteur"), style: "text-decoration:none; color:white;" %>
     </div>
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/matt-nelson-aI3EBLvcyu4-unsplash_drfsex.jpg)">
-      <%= link_to "Promeneurs", professionals_path(speciality: "Promeneur"), style: "text-decoration:none; color:white;" %>
+      <%= link_to "Promeneurs", professionals_path(specialty: "Promeneur"), style: "text-decoration:none; color:white;" %>
     </div>
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
       <div class="d-inline text-center">
-        <%= link_to "Comportementalistes", professionals_path(speciality: "Comportementaliste"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+        <%= link_to "Comportementalistes", professionals_path(specialty: "Comportementaliste"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
         <p>Bientôt disponible</p>
       </div>
     </div>
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
       <div class="d-inline text-center">
-        <%= link_to "Educateurs", professionals_path(speciality: "Educateur"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+        <%= link_to "Educateurs", professionals_path(specialty: "Educateur"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
         <p>Bientôt disponible</p>
       </div>
     </div>
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
       <div class="d-inline text-center">
-        <%= link_to "Pensions", professionals_path(speciality: "Pension"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+        <%= link_to "Pensions", professionals_path(specialty: "Pension"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
         <p>Bientôt disponible</p>
       </div>
     </div>
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
       <div class="d-inline text-center">
-        <%= link_to "Nutritionnistes", professionals_path(speciality: "Nutritionniste"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+        <%= link_to "Nutritionnistes", professionals_path(specialty: "Nutritionniste"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
         <p>Bientôt disponible</p>
       </div>
     </div>
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
       <div class="d-inline text-center">
-        <%= link_to "Petsitters", professionals_path(speciality: "Petsitter"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+        <%= link_to "Petsitters", professionals_path(specialty: "Petsitter"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
         <p>Bientôt disponible</p>
       </div>
     </div>
