--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,20 +1,28 @@
-<h2>Renvoyer les instructions de confirmation</h2>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-sm-4">
+      <div class="form-devise">
+          <i class="fa-solid fa-paw float-end text-primary"></i>
+          <h2>Renvoyer les instructions de confirmation</h2>
+          <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+            <%= f.error_notification %>
+            <%= f.full_error :confirmation_token %>
 
-<%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :confirmation_token %>
+            <div class="form-inputs">
+              <%= f.input :email,
+                          required: true,
+                          autofocus: true,
+                          value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email),
+                          input_html: { autocomplete: "email" } %>
+            </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email),
-                input_html: { autocomplete: "email" } %>
+            <div class="form-actions">
+              <%= f.button :submit, "Renvoyer les instructions de confirmation", class: "btn btn-primary" %>
+            </div>
+          <% end %>
+
+          <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Renvoyer les instructions de confirmation" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
