--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -15,39 +15,38 @@
         </svg>
         <p> Le vétérinaire :</p>
     </div>
-  </div>
         <div class="card-body">
           <h5 class="card-title">Nom veterinaire</h5>
         </div>
+  </div>
 
 
-<div class="card d-flex flex-column mb-3">
-  <div class="card-header">
+
+  <div class="card d-flex flex-column mb-3">
+    <div class="card-header">
        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
         <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
         </svg>
         <p> Date du rendez-vous:</p>
     </div>
-  <div class="card-body">
-    <h5 class="card-title">date rendez-vous affichage</h5>
+        <div class="card-body">
+          <h5 class="card-title">date rendez-vous affichage</h5>
+        </div>
   </div>
-</div>
+
 
  <div class="card">
     <div class="card-header">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
       <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
       <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
-</svg>
+      </svg>
         <p> Heure du rendez-vous:</p>
     </div>
-  <div class="card-body">
-    <h5 class="card-title">Heure du rendez-vous affichage</h5>
+    <div class="card-body">
+      <h5 class="card-title">Heure du rendez-vous affichage</h5>
+    </div>
   </div>
-</div>
-</div>
-
-
 </div>
 
 
@@ -58,7 +57,8 @@
 
    <%# boutton pour continuer %>
     <div class="p-2">
-      <button class="btn btn-primary">Confirmer le rendez-vous</button>
+      <%# <%= link_to 'Continuer', professional_appointment_path(@professional, id:@appointment), class: "btn btn-primary"%> 
+
     </div>
 
   <div class="p-2">
