--- a/app/views/professionals/_available_slots.html.erb
+++ b/app/views/professionals/_available_slots.html.erb
@@ -1,16 +1,17 @@
 <div class="m-4">
-    <h4>Prochains rendez-vous disponibles</h4>
-    <% 7.times do |i| %>
-      <div class="nav-item dropdown" data-controller="appointment-selected">
-        <a href="#" class="btn btn-outline-primary w-100 m-1" data-appointment-selected-target="selectedDate">
-          <%= DateTime.current.to_date + i %>
-        </a>
-        <div class="d-none d-flex justify-content-between mx-2" data-appointment-selected-target="times">
-          <a href="<%=new_professional_appointment_path(professional)%>" class="btn btn-outline-primary">10:00</a>
-          <a href="<%=new_professional_appointment_path(professional)%>" class="btn btn-outline-primary">11:00</a>
-          <a href="<%=new_professional_appointment_path(professional)%>" class="btn btn-outline-primary">14:00</a>
-          <a href="<%=new_professional_appointment_path(professional)%>" class="btn btn-outline-primary">15:00</a>
-        </div>
+  <h4>Prochains rendez-vous disponibles</h4>
+  <% 7.times do |i| %>
+    <div class="nav-item dropdown" data-controller="appointment-selected", data-appointment-selected-api-key-value=<%=professional.id%>>
+      <a href="#" class="btn btn-outline-primary w-100 m-1" data-appointment-selected-target="selectedDate">
+        <%= (DateTime.current.to_date + i).strftime('%Y-%m-%d') %>
+      </a>
+      <div class="d-none d-flex justify-content-between mx-2" data-appointment-selected-target="times">
+        <% ["10:00", "11:00", "14:00", "15:00"].each do |time| %>
+          <a href="#" class="btn btn-outline-primary" data-time="<%= time %>" data-action="click->appointment-selected#confirm">
+            <%= time %>
+          </a>
+        <% end %>
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
+</div>
