--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,6 +18,9 @@
           <li class="nav-item active">
             <%= link_to "A propos", "#", class: "nav-link" %>
           </li>
+          <li class="nav-item active">
+            <%= link_to "Proposer un service", new_professional_path, class: "nav-link" %>
+          </li>
           <li class="nav-item dropdown d-flex align-items-end flex-column">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
