--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -30,10 +30,20 @@
         </div>
       </div>
       <div class="d-flex flex-row justify-content-between m-2">
-        <% @reviews.each do |review| %>
-          <p><%= review.content %></p>
-          <p><%= review.rating %></p>
+        <% if @reviews.empty? %>
+          <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
+            <p class="text-center">Soyez le premier à mettre un avis !</p>
+            <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733931919/customer-feedback_r2zm9o.png">
+          </div>
+        <% else %>
+          <% @reviews.each do |review| %>
+            <p><%= review.content %></p>
+            <p><%= review.rating %></p>
+          <% end %>
         <% end %>
+      </div>
+      <div class="d-flex justify-content-center">
+        <%= link_to "Ajouter un avis",  new_professional_review_path(@professional, @appointment), class:"btn btn-primary text-white", style:"width: 20%;"%>
       </div>
     </div>
   </div>
