--- a/app/views/professionals/new.html.erb
+++ b/app/views/professionals/new.html.erb
@@ -1,19 +1,19 @@
 <h1 class="text-center">
   Créer un nouveau professionnel
 </h1>
-<%= simple_form_for @professional do |p|%>
-  <div class="form-inputs">
-    <%= p.input :name, label: "Nom du professionnel" %>
-    <%= p.input :specialty, label: "Spécialité", collection: ["Vétérinaire", "Toiletteur", "Comportementaliste", "Educateur", "Pension", "Promeneur", "Nutritionniste", "Petsitter", "Autre"] %>
-    <%= p.input :address,
-        input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
-        wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
-      %>
-    <%= p.input :phone, label: "Numéro de téléphone" %>
-    <%= p.input :description, label: "Description", as: :text, input_html: { style: 'height: 150px;' } %>
-    <%= p.input :photo, label: "Photo" %>
-  </div>
-  <div class="form-actions">
-    <%= p.button :submit, "Créer le professionnel", class: "btn btn-primary" %>
-  </div>
-<% end %>
+<div class="form-devise my-4" style="width: 40%; margin: auto">
+  <%= simple_form_for @professional do |p|%>
+      <%= p.input :name, label: "Nom du professionnel" %>
+      <%= p.input :specialty, label: "Spécialité", collection: ["Vétérinaire", "Toiletteur", "Comportementaliste", "Educateur", "Pension", "Promeneur", "Nutritionniste", "Petsitter", "Autre"] %>
+      <%= p.input :phone, label: "Numéro de téléphone" %>
+      <%= p.input :email, label: "Adresse email" %>
+      <%= p.input :address,
+          input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
+          wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+        %>
+      <%= p.input :description, label: "Description", as: :text, input_html: { style: 'height: 150px;' } %>
+      <%= p.input :photo, label: "Photo" %>
+      <%= p.button :submit, "Créer le professionnel", class: "btn btn-primary" %>
+
+  <% end %>
+</div>
