--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,12 +4,12 @@
       <div class="form-devise">
         <i class="fa-solid fa-paw float-end text-primary"></i>
         <h2>Donnez votre avis ! </h2>
-        <p>Qu'avez-vous pensé de votre expérience avec <%=@appointment.professional.name%> ?</p>
+        <p>Qu'avez-vous pensé de votre expérience avec <%=@professional.name%> ?</p>
 
         <%= simple_form_for [@professional, @appointment, @review] do |r| %>
-          <%= r.input :score, label: "Note", collection: 1..5, as: :radio_buttons%>
+          <%= r.input :rating, label: "Note sur 5", collection: 1..5, as: :radio_buttons%>
           <%= r.input :content, label: "Commentaire", as: :text %>
-          <%= r.button :submit, "Valider", class: "btn btn-primary" %>
+          <%= r.button :submit, "Valider", class: "btn btn-primary mt-3" %>
         <% end %>
       </div>
     </div>
