--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -8,7 +8,7 @@
 <div class="grid-professional-show">
   <div class="m-4">
     <div style="margin: 8px;" class="text-center">
-      <%= cl_image_tag @professional.photo.key, width: 400, crop: :fill%>
+      <%= cl_image_tag @professional.photo.key, width: 400, crop: :fill, class:"rounded-4 mb-3"%>
     </div>
     <div class="card_pro">
       <h4>Contact : </h4>
@@ -36,10 +36,10 @@
             <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733931919/customer-feedback_r2zm9o.png">
           </div>
         <% else %>
-          <% @reviews.each do |review| %>
-            <p><%= review.content %></p>
-            <p><%= review.rating %></p>
-          <% end %>
+            <% @reviews.each do |review| %>
+                <p><%= review.content %></p>
+                <p><%= review.rating %> / 5</p>
+            <% end %>
         <% end %>
       </div>
       <div class="d-flex justify-content-center">
