--- a/app/views/simple_calendar/_week_calendar.html.erb
+++ b/app/views/simple_calendar/_week_calendar.html.erb
@@ -1,12 +1,7 @@
 <div class="simple-calendar">
-  <div class="calendar-heading">
-    <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
-    <% if calendar.number_of_weeks == 1 %>
-      <span class="calendar-title"><%= t('simple_calendar.week', default: 'Week') %> <%= calendar.week_number %></span>
-    <% else %>
-      <span class="calendar-title"><%= t('simple_calendar.week', default: 'Week') %> <%= calendar.week_number %> - <%= calendar.end_week %></span>
-    <% end %>
-    <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
+  <div class="calendar-heading d-flex justify-content-between">
+    <%= link_to t('simple_calendar.previous', default: 'Précédente'), calendar.url_for_previous_view, class: "btn btn-primary m-2" %>
+    <%= link_to t('simple_calendar.next', default: 'Suivante'), calendar.url_for_next_view, class: "btn btn-primary m-2" %>
   </div>
 
   <table class="table table-striped">
