--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -23,6 +23,11 @@
 
   <h3 class="mt-5">Nos professionnels</h3>
   <div class="d-flex justify-content-start custom-scroll mt-2", style="white-space: nowrap; overflow-x: auto;">
+    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1734016805/vitaly-gariev-HURf5iUtSQg-unsplash_haxcr5.jpg)">
+      <div class="d-inline text-center">
+        <%= link_to "Tous nos professionnels", professionals_path, style: "text-decoration:none; color:white;" %>
+      </div>
+    </div>
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/judy-beth-morris-5Bi6MWlWMbw-unsplash_funbpk.jpg)">
       <%= link_to "Vétérinaires", professionals_path(specialty: "Vétérinaire"), style: "text-decoration:none; color:white;" %>
     </div>
