--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -1,12 +1,13 @@
 <div>
-  <%= link_to 'Back', :back %>
+  <i class="fa-solid fa-chevron-left text-primary ms-4"></i><%= link_to 'Back', :back, class:"m-3 text-decoration-none" %>
 </div>
 <div class="text-center m-4">
   <h1><%= @professional.name %></h1>
   <p><%= @professional.specialty%></p>
 </div>
-<div class="grid-professional-show">
-  <div class="m-4">
+
+<div class="grid">
+  <div id="info-pro" class="m-4">
     <div style="margin: 8px;" class="text-center">
       <%= cl_image_tag @professional.photo.key, width: 400, crop: :fill, class:"rounded-4 mb-3"%>
     </div>
@@ -29,7 +30,7 @@
           <p class="m-0 mx-1">(<%=@reviews.count%>)</p>
         </div>
       </div>
-      <div class="d-flex flex-row justify-content-between m-2">
+      <div class="mt-2">
         <% if @reviews.empty? %>
           <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
             <p class="text-center">Soyez le premier à mettre un avis !</p>
@@ -37,15 +38,25 @@
           </div>
         <% else %>
             <% @reviews.each do |review| %>
-                <p><%= review.content %></p>
-                <p><%= review.rating %> / 5</p>
+              <div class="border-bottom mt-2">
+                <div class="d-flex flex-row">
+                  <%# <p><%= review.user.first_name %></p> Prénom%>
+                  <%# <p><%= review.user.last_name %></p> Nom%>
+                </div>
+                <div class="d-flex flex-row justify-content-between">
+                  <p><%= review.content %></p>
+                  <p><%= review.rating %> / 5</p>
+                </div>
+              </div>
             <% end %>
         <% end %>
       </div>
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center mt-3">
         <%= link_to "Ajouter un avis",  new_professional_review_path(@professional, @appointment), class:"btn btn-primary text-white", style:"width: 20%;"%>
       </div>
     </div>
   </div>
-  <%= render "available_slots", professional: @professional%>
+  <div id="available-pro", style="position: sticky; top: 100px;">
+    <%= render "available_slots", professional: @professional %>
+  </div>
 </div>
