--- a/app/views/appointments/pro_show.html.erb
+++ b/app/views/appointments/pro_show.html.erb
@@ -4,17 +4,17 @@
       <h3> Mes Services </h3>
     </div>
     <% @professionals.each do |professional| %>
-      <button class="btn btn-outline-info m-1 text-black rounded rounded-4">
-        <%= professional.specialty%>
-      </button>
+      <a href="<%= pro_show_professional_path(professional) %>" class="btn btn-outline-info m-1 text-black rounded rounded-4">
+        <%= professional.specialty %>
+      </a>
     <% end %>
   </div>
   <div class="text-center m-4 w-100" data-controller="appointment">
     <div >
       <%= week_calendar(events: @appointments) do |date, events| %>
-      <p data-appointment-target="date">
-        <%= date %>
-      </p>
+        <p data-appointment-target="date">
+          <%= date %>
+        </p>
         <% events.each do |event| %>
           <p><%= event.user.email%></p>
         <% end %>
@@ -26,9 +26,9 @@
       <% end %>
     </div>
     <div>
-      <%= turbo_frame_tag :appointment_details do %>
-        <% render "appointment_details" %>
-      <% end %>
+    <%# <%= turbo_frame_tag :appointment_details do %> %>
+      <%# <% render "appointment_details", appointment: @appointments %> %>
+      <%# <% end %> %>
+      <%# </div> %>
     </div>
   </div>
-</div>
