--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-end" style="width: fit-content;" aria-labelledby="navbarDropdown">
               <%= link_to "Mes rendez-vous", "#", class: "dropdown-item" %>
-              <%= link_to "Mes services", pro_show_user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Mes services", pro_index_user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Mon profil", "#", class: "dropdown-item" %>
               <%= link_to "Se déconnecter", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
