--- a/app/views/appointments/_all_slot.html.erb
+++ b/app/views/appointments/_all_slot.html.erb
@@ -8,7 +8,11 @@
     <% end_time = Time.parse("#{end_hour}:00") %>
     <div data-appointment-target="times">
       <% while current_time <= end_time do %>
-        <a href="#" class="btn btn-outline-primary m-2" data-time="<%= current_time.strftime("%H:%M") %>" data-action="click->appointment#select">
+        <% is_active = @appointments.any? { |appointment| appointment.start_time.strftime("%H:%M") == current_time.strftime("%H:%M") } %>
+        <a href="#"
+     class="btn btn-outline-primary m-2 <%= 'active' if is_active %>"
+     data-time="<%= current_time.strftime("%H:%M") %>"
+     data-action="click->appointment#select">
           <%= current_time.strftime("%H:%M") %>
         </a>
         <% current_time += interval.minutes %>
@@ -16,3 +20,4 @@
     </div>
   </div>
 <% end %>
+<%# pro_show_professional_path(professional, appointment) %>
