--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <i class="fa-solid fa-chevron-left text-primary ms-4"></i><%= link_to 'Back', :back, class:"m-3 text-decoration-none" %>
 </div>
-<div class="sticky-top mt-3">
+<div>
   <div class="text-center m-4">
     <h1><%= @professional.name %></h1>
     <p><%= @professional.specialty%></p>
