--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -72,23 +72,30 @@
   <h3 class="mt-5">Vos futurs rendez-vous</h3>
   <% if user_signed_in? %>
     <% if @appointments.exists? %>
-      <p>HELLO<p>
-      <%# <% @appointments.each do |appointment| %> %>
-        <%# <div class="card-appointment"> %>
-          <%# <div class="card-appointment-header"> %>
-            <%# <div class="d-flex "> %>
-              <%# <i class="fa-regular fa-calendar-days"></i> %>
-              <%# <h5><%= appointment.professional.speciality %></h5> %>
-              <%# <p><%= appointment.date.strftime("%d/%m/%Y") %></p> %>
-              <%# <i class="fa-regular fa-clock"></i> <p><%= appointment.date.strftime("%H:%M") %></p> %>
-            <%# </div> %>
-          <%# </div> %>
-        <%# </div> %>
-        <%# <div class="card-appointment-body d-flex"> %>
-          <%# <img src="<%= appointment.professional.photo %>" alt="Photo du professionnel" class="rounded-circle"> %>
-          <%# <%= link_to appointment.professional.name, professional_appointment_path %> %>
-        <%# </div> %>
-      <%# <% end %> %>
+      <% @appointments.each do |appointment| %>
+        <div class="d-flex justify-content-center">
+          <div class="card mt-4 mb-5 shadow" style="width: 50%;">
+            <div class="card-header bg-primary rounded">
+              <div class="d-flex justify-content-around fw-bold">
+                <div class="d-flex align-items-center">
+                  <i class="fa-regular fa-calendar-days"></i>
+                  <p class="ms-3"><%= appointment.date.strftime("%d/%m/%Y") %></p>
+                </div>
+                <div class="d-flex align-items-center">
+                  <i class="fa-regular fa-clock ms-5"></i> <p class="ms-3"><%= appointment.start_time.strftime("%H:%M") %></p>
+                </div>
+              </div>
+            </div>
+            <div class="card-body d-flex align-items-center ms-5">
+              <%= image_tag url_for(appointment.professional.photo), alt:"Photo du professionnel", class:"small-rounded-circle"%>
+              <div class="d-flex flex-column ms-4">
+                <%= link_to appointment.professional.name, professional_appointment_path(appointment.professional, appointment), class:"text-decoration-none" %>
+                Lieux : <%= appointment.professional.address%>
+              </div>
+            </div>
+          </div>
+        </div>
+       <% end %>
     <% else %>
       <div class="d-flex justify-content-center align-items-center">
         <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
