--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= link_to 'Retour', :back %>
+  <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
 </div>
 
 <div class="container text-center shadow-lg p-3 mb-5 bg-body-tertiary rounded">
