--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,6 +1,6 @@
 
 <div>
-  <i class="fa-solid fa-chevron-left text-primary ms-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
+  <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
 </div>
 
 <div class="container">
