--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -5,7 +5,6 @@
       <h1>accompagner avec soin</h1>
     </div>
   </div>
-
   <%= simple_form_for :search, url: professionals_path, method: :get do |f| %>
     <div class="mt-1 d-flex justify-content-end search-form-control form-group", style="width: 100%;" >
       <div class="mt-1 d-flex align-items-center search-form-control form-group", style="width: 24%; height:30px;">
@@ -20,7 +19,6 @@
       </div>
     </div>
   <% end %>
-
   <h3 class="mt-5">Nos professionnels</h3>
   <div class="d-flex justify-content-start custom-scroll mt-2", style="white-space: nowrap; overflow-x: auto;">
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1734016805/vitaly-gariev-HURf5iUtSQg-unsplash_haxcr5.jpg)">
@@ -68,34 +66,40 @@
       </div>
     </div>
   </div>
-
   <h3 class="mt-5">Vos futurs rendez-vous</h3>
   <% if user_signed_in? %>
     <% if @appointments.exists? %>
       <% @appointments.each do |appointment| %>
-        <div class="d-flex justify-content-center">
-          <div class="card mt-4 mb-5 shadow" style="width: 50%;">
-            <div class="card-header bg-primary rounded">
-              <div class="d-flex justify-content-around fw-bold">
-                <div class="d-flex align-items-center">
-                  <i class="fa-regular fa-calendar-days"></i>
-                  <p class="ms-3"><%= appointment.date.strftime("%d/%m/%Y") %></p>
-                </div>
-                <div class="d-flex align-items-center">
-                  <i class="fa-regular fa-clock ms-5"></i> <p class="ms-3"><%= appointment.start_time.strftime("%H:%M") %></p>
+        <a href="<%=professional_appointment_path(appointment.professional, appointment)%>" style="color: black; text-decoration: none;">
+          <div class="d-flex justify-content-center">
+            <div class="card mt-4 mb-5 shadow" style="width: 50%;">
+              <div class="card-header bg-primary rounded">
+                <div class="d-flex justify-content-around fw-bold">
+                  <div class="d-flex align-items-center">
+                    <i class="fa-regular fa-calendar-days"></i>
+                    <p class="ms-3"><%= appointment.date.strftime("%d/%m/%Y") %></p>
+                  </div>
+                  <div class="d-flex align-items-center">
+                    <i class="fa-regular fa-clock ms-5"></i>
+                    <p class="ms-3"><%= appointment.start_time.strftime("%H:%M") %></p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="card-body d-flex align-items-center ms-5">
-              <%= image_tag url_for(appointment.professional.photo), alt:"Photo du professionnel", class:"small-rounded-circle"%>
-              <div class="d-flex flex-column ms-4">
-                <%= link_to appointment.professional.name, professional_appointment_path(appointment.professional, appointment), class:"text-decoration-none" %>
-                Lieux : <%= appointment.professional.address%>
+              <div class="card-body d-flex align-items-center ms-5">
+                <%= image_tag url_for(appointment.professional.photo), alt:"Photo du professionnel", class:"small-rounded-circle"%>
+                <div class="d-flex flex-column ms-4">
+                  <p>
+                    Rendez-vous avec : <%= appointment.professional.name%>
+                  </p>
+                  <p>
+                    Lieux : <%= appointment.professional.address%>
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-       <% end %>
+        </a>
+      <% end %>
     <% else %>
       <div class="d-flex justify-content-center align-items-center">
         <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
