--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,7 @@
+<div>
+  <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
+</div>
+
 <div class="container mb-5">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-4">
