--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<div>
+  <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
+</div>
 <div class="row">
   <div class="col card_pro p-4 m-4 text-center">
     <h2> <strong> Mon Profil </strong> </h2>
