--- a/app/views/appointments/_all_slot.html.erb
+++ b/app/views/appointments/_all_slot.html.erb
@@ -4,21 +4,26 @@
         end_hour = 17  # Heure de fin
         interval = 60  # Durée entre les créneaux en minutes
       %>
-    <% current_time = Time.parse("#{start_hour}:00") %>
-    <% end_time = Time.parse("#{end_hour}:00") %>
+    <% current_time = Time.parse("#{selected_date} #{start_hour}:00") %>
+    <% end_time = Time.parse("#{selected_date} #{end_hour}:00") %>
     <div data-appointment-target="times">
       <% while current_time <= end_time do %>
-        <% is_active = @appointments.any? { |appointment| appointment.start_time.strftime("%H:%M") == current_time.strftime("%H:%M") } %>
-        <a  href="#"
-            class="btn btn-outline-primary m-2 <%= 'active' if is_active %>"
-            data-time="<%= current_time.strftime("%H:%M") %>"
-            data-action="click->appointment#select">
-          <%= current_time.strftime("%H:%M") %>
-        </a>
+        <% has_appointment = @appointments.any? { |appointment| appointment.start_time.strftime("%Y-%m-%d %H:%M") == current_time.strftime("%Y-%m-%d %H:%M") } %>
+        <%appointment = Appointment.find_by(start_time: current_time.strftime("%Y-%m-%d %H:%M"))%>
+        <% if (has_appointment==false) %>
+          <%= link_to current_time.strftime("%H:%M"), professionals_path,
+              class:"btn btn-outline-primary m-2 ",
+              data: {time: current_time.strftime("%H:%M"),
+                    action:"click->appointment#select"}%>
+        <% else %>
+          <%= link_to current_time.strftime("%H:%M"), pro_show_professional_path(professional.id, appointment.id),
+              class:"btn btn-outline-primary m-2 #{'btn-info text-dark' if has_appointment} ",
+              data: {time: current_time.strftime("%H:%M"),
+                    action:"click->appointment#select",
+                    turbo_frame: :appointment_details,}%>
+        <% end %>
         <% current_time += interval.minutes %>
       <% end %>
     </div>
   </div>
 <% end %>
-<%# pro_show_professional_path(professional, appointment) %>
-
