--- a/app/views/professionals/pro_index.html.erb
+++ b/app/views/professionals/pro_index.html.erb
@@ -1,15 +1,11 @@
-<div class="d-flex flex-row " style="height: 100%;">
-  <div class="d-flex flex-column shadow"  style="width: 300px; height: 100vh; background-color:rgba(236, 230, 230, 0.31); padding: 20px">
-    <div class="text-center m-4">
-      <h3> Mes Services </h3>
-    </div>
-    <% @professionals.each do |professional| %>
-      <a href="<%= pro_show_user_path(@user, professional) %>" class="btn btn-outline-info m-1 text-black rounded rounded-4">
-        <%= professional.specialty %>
-      </a>
-    <% end %>
-  </div>
+<div class="d-flex flex-row justify-content-between" style="height: 100%;">
+  <%# sidebar all my services %>
   <div>
-    <p>Cliquez pour afficher le détail</p>
+    <%= render "all_services" %>
+  </div>
+
+  <div class="text-center m-4" style="width: 100%;">
+    <h4> <strong> Bienvenue sur votre tableau de bord </strong></h4>
+    <p>Veuillez sélectionner un service pour voir votre planning </p>
   </div>
 </div>
