--- a/app/views/appointments/_appointment_details.html.erb
+++ b/app/views/appointments/_appointment_details.html.erb
@@ -1,16 +1,13 @@
 <%= turbo_frame_tag :appointment_details do %>
+  <h4 class="text-center m-4"> Détail du rendez-vous </h4>
   <div class="card_pro">
     <div class="d-flex flex-row">
       <p>Nom : </p>
-      <h5 class="mx-2"> Nom de client </h5>
+      <h5 class="mx-2"> <strong><%= appointment.user.first_name%> <%= appointment.user.last_name%></strong></h5>
     </div>
     <div class="d-flex flex-row my-4">
-      <p>Nom : </p>
-      <h5 class="mx-2"> <%= appointment.date%> </h5>
-    </div>
-    <div class="d-flex flex-row">
-      <p>Nom : </p>
-      <h5 class="mx-2"> <%= appointment.start_time%> </h5>
+      <p>Motif du rendez-vous : </p>
+      <h5 class="mx-2"> <%= appointment.reason%> </h5>
     </div>
   </div>
 <% end %>
