--- a/app/views/professionals/pro_show.html.erb
+++ b/app/views/professionals/pro_show.html.erb
@@ -1,16 +1,12 @@
-<div class="d-flex flex-row " style="height: 100%;">
-  <div class="d-flex flex-column shadow"  style="width: 300px; height: 100vh; background-color:rgba(236, 230, 230, 0.31); padding: 20px">
-    <div class="text-center m-4">
-      <h3> Mes Services </h3>
-    </div>
-    <% @professionals.each do |professional| %>
-      <a href="<%= pro_show_user_path(@user, professional) %>" class="btn btn-outline-info m-1 text-black rounded rounded-4">
-        <%= professional.specialty %>
-      </a>
-    <% end %>
+<div class="d-flex flex-row justify-content-between" style="height: 100%;">
+  <%# sidebar all my services %>
+  <div>
+    <%= render "all_services" %>
   </div>
-  <div class="text-center m-4" data-controller="appointment">
-    <div >
+  <%# calendar %>
+  <div class="text-center m-4" data-controller="appointment" style="width: 100%;">
+    <h4> <strong> Bienvenue sur votre tableau de bord </strong></h4>
+    <div class="m-4">
       <%= week_calendar(events: @appointments, professional: @professional) do |date, events| %>
         <p data-appointment-target="date">
           <%= date %>
@@ -19,14 +15,9 @@
           <p><%= event.user.first_name%> <%= event.user.last_name%></p>
         <% end %>
       <% end %>
-    </div>
-    <div>
-      <%= turbo_frame_tag :all_slot do %>
-        <% render "all_slot", professional: @professional %>
-      <% end %>
-    </div>
-    <div>
-      <p>Veuillez sélectionner un créneau de rendez-vous pour voir le détail</p>
+      </div>
+      <div>
+        <%= render "all_slot" %>
+      </div>
     </div>
   </div>
-</div>
